--- a/seed-dev.toml
+++ b/seed-dev.toml
@@ -1,6 +1,6 @@
 [server]
 host = ""
-port = "8081"
+port = "3003"
 
 [log]
 log_dir = "./log"
@@ -14,6 +14,6 @@ api_key = "AAAAyQ2ofN0:APA91bEz66dHhehSpnQDpjolBt9EeU9o2ZOi_Tc5Z7slUfQ_CXGH9Ww6s
 
 [db]
 host = "163.44.206.108:27017"
-uname = "trunglv"
-password = "trunglv"
-name = "medical"
+uname = ""
+password = ""
+name = "wedding"
